test/typeerrors/ex4.golden
Building file ../test/typeerrors/ex4.act
  Compiling ex4.act for release

ERROR: Error when compiling ex4 module: Type error

  |
5 |    print("a".center(f(3)))
  |                     ^^^^


  |
1 |def f(x,y):
  |    ^
Type incompatibility between definition of and call of f (too few arguments in call)
f is inferred to have a type of the form [A(Plus)] => _(A, A) -> A

- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 

